--- a/delivery.resx
+++ b/delivery.resx
@@ -120,10 +120,127 @@
   <metadata name="ToolStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
   </metadata>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="ToolStripButton6.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAADAAAAAwCAYAAABXAvmHAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAABnWSURBVGhDjVp3XNR3th1ARKOmqUlMMybG3Y1ZTcyaZorG
+        qNG4sSTRbNxoir3FgoqoEEVRVBQQUBFEkCaKSpOigCCCBSwRFCk2EKUzvcJ55/5Gk7z97L59f1yn8Jv5
+        3XPLued+R5VFb4VFb0abTm83rRVWnQ0mPWAw2qA3m6A2tcJo08NkaYFVXwdobgPmm4CunO81Qmeq52u+
+        py+GrjQIZ8LH4ZBnXxz6pTcO+/bD+eQv0VTlh3ZdDtoN1TDrWvndLTCZ1bAaWiE3sxl1MGi0aDe3Qa81
+        wWiwwsT7G4xmGExGGI1i9MGofWDyXA+VSS40mGExaPllNIIRUCa9fNgKg8UMnVkLvVHD95rpxH3oas/j
+        zDFv1JVFwdSYR8cv4n5pPI4GTUXAwr4IWdgT0cuewH7XRxC/tifCPZ5G5KY3kXt4LhquJxN4JWCpgVlb
+        DYu2DiZtEwFoYdbrYNQb0GZtp7O8r87wBwD6fw9AZ+KFvMBg1sBoopPyB4N8wKyYRqeGzsB0WCApodWi
+        MHUDMmM/x5Gd/RG3vi/CXJ+H38weCJjxOPYs6IbIJR0Rv8IRyZ7OiHdTIWltFySs7YEYj95I9h+F8iwv
+        mKuTCOQyYKxBOzNr0jWgzWJ3Su6v1WphszGI4tsfAPwGhNeIqdSMsNrCD1g00FlYKsoFv6fMYjUoFxqa
+        rbC1GHjTWtw+vxupke/h7rnRKNrzMk5u7IHYxc4Im6PC/kUqHFihwkE6fnilCqkeKmSs7YhMr8eQ6NEd
+        ka5PYceCZ+Ez+xV4zn4b4UHuuH61EFr1XVhNBMLoGvTa3/z4rwBa/whAsqA4bo++XKjVNTJCZlhZqtDS
+        1HxSX4ADgUNwLuEdVCd9gJLQV5Hl8xiS13ZAwioVopaqEO3KyHs6ImW1MxJcHRC7wBERc52xa6Yz/Ke7
+        wH9Wd/guHADXWSMQHroF5WXnoW5hf5hYSiaWEu+tJxAD+0Psd+ftwZWyF1NpTVZozUalzg38sDSP0WCz
+        P/ID0mwWsx5WcV4jAFhLjdfRcC0Esb5voCT+fZTH/RXFob1wfIsTUtarkOzF6K9WIX4Zs8GMxC5QIWK2
+        A0Kmq7BrdgfsnNcVO2Y+Aa8f+mDdsi/htmIGzhRkoKXlrgJA7qfRtMJqlfr/LwAeOvuwKZSm1rOJ5H1m
+        wdbGFBrZBxojLDrpA6C9RQPDvV9RkOiO5B0DULivD4ojnkd+UBdkbXXA8U0qpK1TMfoqJBJE3HwV9s5S
+        IWRuBwTSfGd2hv+cPgh0HYZ500Zgk/dKVJVfhpmsZNCTmei4TqdhBsT5fy2hfwFg1baTdWxkITrIZhVK
+        FRACQFhIo2NdsrlsbSx/Lf9GcDCBGVGj5VYODgUMQVbIy8gL6YGcACdk+6pwwoe1TwBH3ZkJllLcIifs
+        nt0ZW6d3hc/cp+Gz+E/YMP9tLP/xY+z298DFolNobrqvlI6UjclEGhUn+fhfAbQRgPC+VW+kEQBBSCYk
+        +kJhGgLTMyJqvqdlao02EwHxC8w6UmoFynJWI8brORTs64VMPxVyA52QtlmFBE8aM3CQjRzC5t6x4Hls
+        XfQm1rmOwOzpH8PdbRoOHdyNyuuXUF93lwHT0SHei37IvU0mi/L40OHfATw0+/sqxXmdfZjZnWcfsA6l
+        7oRetUZGgXSmYXQ0bHINKU9tbFLmgs1wiw19GKHuvXAq5Fmc2t0ZSRtUSN/sQBCdEUvno1hCoYu7YNvC
+        V7FoyutwXfgVQsMDUVB0BjX361j3LQr32yxtMMvg1DFwejrPKlAefwPxHwDYL6ApTfuwabQKI0ljCwC9
+        2cJMEJAMNCv7wdgIo4VT00QAxmPI3zeUkX8BWVs6IX97N5ZQZ8SRRhM4ByLJSME/P4JLKfNguJuGgzEB
+        uFJawkjzozJezGLtDBxLlgNUrxPnpS8fEsl/AmA3ld1haVQipknUxdGHAIyUEnqDiU3FFLNsLFZmie+b
+        TJwP2ipY7kUzC5uAqllozvoQZTGvcDY8g/N7X8D5yL6oTHoP1qsL0VYbgtMZPvDbvgblFVWUDewpMrI4
+        KlHXUT78b+f/nwDszkq5iPMPTRrHTqtmUqw4a6BOMjMbylDTSRMxWq1VaNMche7GSjSdmwhcHQ9cGwuU
+        jSGgCbCV8XXFZNSd/Qammm0wNWdgm98q/FpymQDUsFEFKN9n4PczSJIFsd/K5/8E8KCE7I4+zIK9cf+o
+        P6ShrUbWKF/LDY0aAcOGZ9rN+krUV20DGtyAu7PRXjIGrYXvoPX8YNwveBMtRe/DcGkYcH8uTLc8cCTi
+        e3h6/IjSsotAG3tL26z0m3IfMs7DxhUw4rz9td3Rf+e8AkAZyfKmfNGDL7P/0U5TJkZemtsOgCBJc0J3
+        VpsOupbTOLpnEM7G9kF9xtswn/kY1gsfAuXDYC15B7bLf0P7+TdRl94faX7PIdRrIEJ3zEVFZRGamutg
+        sTHbBnK/osMYSDKRPRssTzr/kE7/vfOSGdKonX0ExAMADyMi79HEeVGJZjKFvDbrNZQWzVSu19F4IxxJ
+        QS/hakIfXI96WbFrB3qjKPJxnIvsiouRLri4S4ULwc44FfAEDnq/iLig8bh2KQZG7T3FQT0BKPc003EG
+        SM9s/1Y2ck/x5YHzv1UK7TcAbfxHAEiN66nJpR+0VKUyfU2yB1AlUusqjSZp5cWUz1VAcxqOh43CuehB
+        uJP2Dm4m/A0VcYNQkTAYZYcGouTQX3A59gWURnbHr3u64az/I8jz645DW55l1j7D7ZIUmNQNSoAUZ0w2
+        pf/UegFlYb/RGDiR+CL1BYDim8ie30CwhGysN4mupE2WFz0dVNiHUVGElaGJKlGtfKFJ20LnqeVNBSg4
+        MAXZuwbj1rHPUJX0MapTR6Du+Oe4kTwcN1KHo5SASuNfw1UBsa8HroX1xKU9TyB9WwfEbHgSh4MmovxM
+        FEViJYyt9xkgCRqJwdTGHYQzwWyfS78DEMfNCgAxyYaAUj10XmEiOi+plIjIQmM1tLHXyAxa8h1vAOMN
+        mGsjkRI2FKk7B6P65LeoyZyE+pzJqMn+ErV5X6Hy2ChUHx9N+vwAd1Lfxs3Dr+Lq/qdQGtELF/d2xymW
+        U96ux5Hg/QSivfujKM0Nxrp8BqUeBnUzLBbJhBmN6iaYRcrL8iLlTH+Mhnblb5IBpcz5Nw4yezpEJogJ
+        GCMpjElQFGg7n7fruDIaylCR58Oafw8Xj3yCW7mTUZ37He5l/wjjhSW4d+pH3M3n68LvUXt6Km6mT8Dt
+        YyNxJ2kQqg72xdWo3rgS2QtnOa0LdzqjIKgTUn26IsKrD3LiZqD5WhqVbo2y9WlJErp2A9R0QFjSDoAY
+        KSaVeUV/7b1BAPJCGV4CQhqIDou4U5zXUcGxF9qazqPw6PdI2/kGKhL/jtoTk1BXMBX3z8xAQ+HPaDyz
+        BOoLrqg/vxh1xe64lrkQFw7/hMq0abiZ8inupr6Hsuh+uLD7aVwKexyFOxxxZrsKOZTfRzc9irDVz1HV
+        foO7xQd5X2a5jXKFLNfEaS+VIRUhSpgvmQX7liYApLS4Uj5oCl6kDBNSp83I0iFibtfK2ncmZQHSQ17H
+        zbSPcC99PFpyf0BD/gyoLy6DuWwjWi9tYIK2Q1++E41Xw7Bx8VBMG/0sChNcUZU9H2UpX6IycTTKDw7G
+        ZZZS0S4XFAU44jzVa06AM1K2clNzexkJW75A5blIVut1NHM7a7VZlKqQKlEA0OzD7Q8A5AKlpvgHoVQz
+        p67wvQi8dvUN3CxehZTd/VCR8iFq00agJetbqPPmwli0hru8NwylfjCW7yUxJeBqXjgSwtZjyYyJmP6P
+        UfDxnImUuHXYvHIEtrpyb4gha+1/CYW7nXF2hwqF/pTelN+ZW52Q6vUk9q94ETGbR+NKYTjnQwPUZs4J
+        BQDLhVWh9IEwlryWsuKjSmfl+sbGlcg/BGAxtsKiuQdbcy6SGPnzB17BreSP0JgxHg2ZU2A65wptoQfa
+        rwXDVhUGS/UR7PVdjKlfDlNs8th3MWXce5g09i1MnjAE304YhB/Gv4zs6K9RdKA/zu5xwbngDgqI/ACq
+        Vy5AWRu5za3rjrCVfRAfOAWlxZlQq6lUZUYofWDnffsssGdFQKjkjwZKY6tFxjcXCq1BOSWA4Twun1yC
+        7H39cOXgn7n7jkVD+ndoyvsJ6nM/w3zRC+1lO2G7EYlTh70wefxQfDtpDNavnozrZ4NYz/5ID5+Dn74c
+        hCl/J4CJf0Fq2GQURQ9QGrk4uCMKuT/ksBcyuT/kEMQx7hDxXPxD3d9AfPAy3L9RArOumRTLgFosyumI
+        nnUkc0qGoIVzQyUHSjJdZYWT0S4iCuZ7XBsP40jwmzi7vy/KEwagJmkc638qGk79hJbzC2C6vA7t14OY
+        gShsXPoFvv7iM3w1YQxuXTsM9c1wNBWvh/ZXXyTunoNvhj+Db4d3Q2LQJ7gQ/ScUh3TG2QAHpZlzace3
+        sJS4R6QRQJJHJ0SueA5hnp8j/+hO6OpvKYE1yeEDWcfA5tRyLsm6qWxk7RpOO25BGlF/NvYtn8uJW+OV
+        tTiy9RlcjmH9Hx6IO8mjUJP+Nepyp6H53HyKtDWwlPkB1Qex4qdPMGPyZHz12RjkJAVAXRUHTekO3Dvt
+        gbLUpTgZOhGZwe+iaP9AlMU+i5K9jD7r/0ygI04SSCYBZMoiRADpvzgjbsWj2LXkT4jZ8k/cvpxL+iQb
+        kf81oorb+dzSCi2DLiWlQiuFGke3BL6VKZEegPYS8mNGoiDsBZSw6SoPvoYbiR/gVtrnqM35Bk2FM6Ep
+        XgbdFW+Yq0IRsuEbTBn1Eb77fDQmDn8dy2cNRfjmKShIWIY7+d64nj4PVccm4Ep0f1zYw+VmjwPO73LA
+        KZZQ1lYVjnODO+7tiLRf7GWU4O6CiGVPIdJrOHKP7Ia6oYEUb0GrohTsAHRkIBF8KmissLG7NbxA9l60
+        GdFWn4cDFF5Fe3uiJKIHKuNeROWRNygRPkZt1gSW0Q9oIf+ri1ei4coatFYGwe37DzBlJJt2zHuY+PkQ
+        jB45GGNGDMTEMf2whgv86ZhJuBQ7BGXxZKEgNi8zUBjogpObnZDt44z0jR2RSACJq+x7dPTyR7Bv9QBE
+        +S3DvRs3Fa2kpbyQVVZOEJVGJiAu9QTA6aYW5WeRcdeA2l/34cgWmZouKA3thsqoXqhM6I+q5CG4fWIM
+        7p38B5t5JprOLELTr6tw+7wnmq7sw5mjmxGwZioW/zgCoz95FSOG9cPIka9j7Mi++OqjrizJ93E6hNta
+        aEfk+jsg19cJpzY7I8ubs2B9ByT84qAcjCkA3Jywy/VF7PCYhmsXi+m0hRqJPSr9IDT64MRCZX9B5/mG
+        iDY5aShIWoq0IAII6YArwZ1QGfYsKpj+8oR3UXHsU9zMHIe6E5PRkDMTd0+vRm2xL2ovBaPm3HY0Fnqh
+        Lm8FKtJnInrbZ/h81Mv4bNRgjB4yAHO+6I3iqAHIJXWeCXFRAORv6oisdY444kXH1zsgniUU5y4AHBC8
+        +BlsX/Ut8jPT7ZTKiCvynyblI6uuSo5I5CxGaFROimG5htSIb5Do9xjymOoLgc4oC+mJsoiXURr7V1w7
+        OgSVKcNxN+0z1B7/jqLuH5gxvg++H9cHezeNo7hbyOXmO1QfG4cryf9ERMgiDPlwIEZ88CHGDu6JzIBX
+        cI5zQKgzb6sz8tcTwC9OCoCEjY6IW6PiQFMhiha0qCcC3CchLSEK9fV3lOhb2a/KvJLTEuo2lcKvpFDJ
+        BMzU/rpz1OtjcDTgceRyGTlHmrsY7IIr4d0ojZ/D1fiBuJbwDm5wWS9Pm4A9mydi/OjX8QXrf9G04Xxv
+        DSX1dA6+qRR907E7YDbefvcVfPrhWxj91qM4HvBnFOzoiPztzsher8IpL5YQARyVGSDRZwkJgH1L7QCC
+        3SciOsgbdXevK78nKOemBGI0iM+UEspWJAdapClYqDp1pxHj9yGO+D6hHFIVkOaKAh3IHo64FNEFV/ZT
+        30e/iopDf8a1xE+xZeUQfDPuDXz99/cxYdhrmDW2N/wXv4tdy4bglxlvYMzHT2LksOfw6eAe+P6zrsjZ
+        +SryCSCDEc/f0hHZax2R4emAIx4EwOjHsnz2L1MhfIkcx/TADtcR2OOzGDU3LpA2mxQZIVNYQFi4F6ge
+        LvEy1aSBoT+NiA2DkOTTEzm+HakaOfL9HHA2WIUi0l9RmAsu7XsUZft74mrcG9g89wX8MOYpTB7aA7Mn
+        9sfk4S/hq6GvYuSbL+HLD/th9N9cMGqQCjPHcEgFDMSJnU/yu0mf2xyR5eOI9HUqJD90ntGPk/Kh8/sW
+        OGLX/J7wW/oefNdMwY2yMxyycnZKqW+iUNAL5bdDJYdWCgiujPLrC4UO9q8fhNSNT5PiOqJgawcUbnPA
+        aeqW0wRREGIHUhLaBSXhvXFs+2uIWtcf0QR9Mupb7PYei/HDe7Fp+2DGhAEIXvkWkra/iRPB/XF8Ry+k
+        7+jARxUy2ANJpE0xiX7cahVi3B0Q60oAPxPAPGfsnNMD/kvfwYZlE1BRWqjUvF4v2xrjLD+DceYqclq6
+        W6S0TccmpgaK93kfyeufRPYmB+RRo5zipMwhb2ezqXN2MvW0YnL4haDHcTbsGRSG98LJYOr8qH5I2TsQ
+        k0apMG6oCmvnd0fW7j7I8u+qLPVp3k44ttURid4EwPo/vp61TwDxBBAjzLPcETGLCWA+S2i2E4Jnd4f/
+        kiHwWjoRFSXnWDZcOR8A0LGRJfAqOdYQNWqmdG0zNHMcX8Yx7qsJno/jBG+UwxGfw2id2M5aZUNnEkQu
+        7WxAB5zz74i8QAJksxfv6aD0zPE9PXAsrDeFXH+kBD+PbAI/Scmcx2mbw4ye8O2MRJZNxjoHJMrpNUtH
+        Glecj17qiNiF7IE5KoTNYhPPehJ+S4Zi44rvUV56kQ5TXguF0leZAXIIwR5o4QtZ4NsoKSgj1NU4G78K
+        MaufQir5WZrt+EYKLXJ2KnshlemXEhAZkC+n0XwugqzArzNO0bmcbV2Qt+MJZGztghPbXPiePYMnvByR
+        7d2Nur+jUjKZfC0AZGhJ3Ucv7YDon50QO48A6HzobBV2zH0S25aMga+nK8qvlypntCIhFH+pSuXkRGW2
+        aDgQqC0o4uTkARRJZSdDsd/jFU5GOs0UpxNEChsvUeqWDqVvd0D2NntkRQ7n+jkjh3LgNJ1WJutGB4Vh
+        TrL8TjKLeQxA9rpOSFnlQs3fGUc9OHHpvNiB5WzepU6IWuSE6PkOiGb0I+j87rkqbJ/XHb7LJ8F/kxcq
+        b1RAb5Wo24985Lc7OVNSWSkftLoWZSuT1Ni03AlqziCKTRmzxkXh53TWayotSYBscEC6jwtOcAGRHsmi
+        k9kEl72ZEaZlCcPQ4RzKgxzKgyyWy4m1Dsjw6Kj8XnZklQMOsmRiaDKsYuh4/OJOiFnQAZF0PpLOh8xU
+        IYDPtyx8kcJwDOJjI1FTVw1ZvnRctmQWSLBlf1cJn4owkh8xWllCsuW0qStwKn4WQld251h3tP/aSCDH
+        2Q8ZHDypnk5UjpTC3p1YGnSQ4DJEzzPaYsfkOcsvzbMDUtc4Kpay2oklw4m7ygkJfB6zxgExKzl5XV2w
+        b44jwhnxffMcsHM6nZ/uiMAlvbDdfQjcFv0DWTmZaCGFaqlEZflSVl4u9xad0Cjp02zhpm+zoVF+aBaS
+        Ndeh8Vo8Dm4ZigMez+CQG+uV0UohkGRaGh3K9HTBMTpz3NMZmR6OigxOXsss0fmjtCNs0qOerPfVHXGU
+        dpiBOMjvEJqUXzD3kW32ki4jFjphz1w6zsgHznGgdYP/vJewYe5bWPrTMOzwX4+yG+XQtYlalh8A5biT
+        5S4/ygiNykAwsoF1Zruk1vPRQpTQVKAkYysl7SDsc+2J+GVdkLiyEw6vcGJGnJHo0Zk17Mwh1BWJq6k0
+        V3XBwdWdcIBOx67tyB7qisjVjyFq5RO0x2mdsd+N29byLtT6XSkVuiJsURcEzemEUFeyzYLO2DyrC/wW
+        9oPPvHfgMecLrF2xALmnslGv1SjLjPKDu5X8r5yQy/7eJjuxjc1AejK2gxsa5wFNy9WMKHU1pciP34io
+        9aOxc1EfOvA8+fppRLg9SmCPIGINnVnF5yt7IHz589i7vDf2rOiNELfe2LmiL4KW90XgslcQuPwlPj6L
+        gKXPIGjxCwj8uTeC5j8PvznPYtuCF7Fp3nNYP68XtrgOgA9pc+nU4fBewX08LZu13wSNpQ2tOruEgLmN
+        ACipZTtj6aukZISBlF9ECJAtwT7gIxvEQkbS1Jbh7LFdiPX9J0I9hmK3+zsUWG8gyPN1BK3tj8A1AxG4
+        +m2qxo/g7/YJWWMoHRmKTUuGKedDG5d+BJ/lH2Cz27vY6jYE/itGInDlGNqnCFg5HFuXf4pt7qOw0W0Y
+        Vi34CB4Lv0K4vzeKThWgproBTToLtFYGl3Uvtd/GyFt0Bu7vRuU/oahE4en0LfwjU6IzKUfaRrOOqJug
+        tskxn0aRsmWXMpB5KIDq0x2b3edirfv3WLt6Gvw2LUWQrzv2BK9DxN4tiI8KRFJ8GDKOxCArOZ5RjEZW
+        WjhOpO5GxuFdSI3bh8SovTgQtQ3REZsQF+6H/Tt9EB+5BdnpkbhYkIPbldfR2tLAktaihdNWR8VsJlta
+        qUDbNNxbZApb9WixtnAOWOmksgdIZ9tPgrUGfhgNaEYTmvlhjRy46hrRXH8b9yruouLKDVwtuY7r5ZW4
+        frUKlRW3UVVdjVu1Nai+V497tY1orNWh+b4GjfUNaGy6i+aGO2iqq0XTXR2lsRbV9+/w+krU3KxGfU0t
+        6u/eRGPdLRjU9tMGvYnUblNz45XTOTpMlWDVUSlQSsgK3GJogRoa/A8UT+XODS6jUwAAAABJRU5ErkJg
+        gg==
+</value>
+  </data>
   <metadata name="StatusStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>124, 17</value>
   </metadata>
-  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         AAABAAEAgIAAAAEAIAAoCAEAFgAAACgAAACAAAAAAAEAAAEAIAAAAAAAAAABAMMOAADDDgAAAAAAAAAA
